--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
-  <script type="module" src="js/script.js"></script>
+<script type="module" src="js/script.js"></script"></script>
 </body>
 </html>
